Try fix missing margin in empty paragraphs

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -86,6 +86,11 @@ h4 b {
   font-family: inherit;
 }
 
+.block-content .block-richtext p,
+.content p {
+  display: inline-block;
+}
+
 .block-content .block-richtext h2 + *,
 .content h2 + * {
   margin-top: 1.75rem;
